# jedi-language-server

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  example-initialization-request.txt  feature_300.py  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: jls-push.yaml  release.yaml  testing.yaml
jedi_language_server/: __init__.py  cli.py  constants.py  initialization_options.py  initialize_options_parser.py  initialize_params_parser.py  jedi_utils.py  notebook_utils.py  pygls_type_overrides.py  pygls_utils.py  server.py  server_ipynb.py  server_utils.py  text_edit_utils.py  type_map.py
tests/: __init__.py  test_cli.py  test_completion.py  test_debounce.py  test_initialization_options.py  test_initialize_options_parser.py  test_initialize_params_parser.py
tests/lsp/: defaults.py  session.py
tests/lsp_test_client/: __init__.py  defaults.py  lsp_run.py  session.py  utils.py
tests/lsp_tests/: test_completion.py  test_definition.py  test_diagnostics.py  test_disgnostics.py  test_document_symbol.py  test_highlighting.py  test_hover.py  test_init_options.py  test_initialize.py  test_refactoring.py  test_references.py  test_rename.py  test_semantic_tokens.py  test_signature.py  test_workspace_symbol.py
tests/test_data/completion/: completion_test1.ipynb  completion_test1.py  completion_test2.py  completion_test_class_self.py
tests/test_data/definition/: definition_test1.ipynb  definition_test1.py  definition_test2.ipynb  somemodule.py  somemodule2.py
tests/test_data/diagnostics/: diagnostics_test1_content_changes.json  diagnostics_test1_contents.txt
tests/test_data/highlighting/: highlighting_test1.ipynb  highlighting_test1.py
tests/test_data/hover/: hover_test1.ipynb  hover_test1.py  somemodule.py
tests/test_data/refactoring/: code_action_test1.ipynb  code_action_test1.py  code_action_test2.py  rename_module.py  rename_test1.ipynb  rename_test1.py  rename_test2.py  rename_test3.py
tests/test_data/refactoring/rename_package_test1/: rename_test_main.ipynb  rename_test_main.py
tests/test_data/refactoring/rename_package_test1/old_name/: some_module.py
tests/test_data/references/: references_test1.ipynb  references_test1.py
tests/test_data/semantic_tokens/: semantic_tokens_test1.py  semantic_tokens_test2.py
tests/test_data/signature/: signature_test1.ipynb  signature_test1.py
tests/test_data/symbol/: somemodule.py  somemodule2.py  symbol_test1.ipynb  symbol_test1.py
