[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
strict = true
enable_error_code = "ignore-without-code,redundant-expr,truthy-bool"

[[tool.mypy.overrides]]
module = "jedi.*"
ignore_missing_imports = true

[tool.poetry]
name = "jedi-language-server"
version = "0.41.3"
description = "A language server for Jedi!"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/pappasam/jedi-language-server"
repository = "https://github.com/pappasam/jedi-language-server"
keywords = [
  "python",
  "completion",
  "refactoring",
  "vim",
  "neovim",
  "lsp",
  "language-server-protocol"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Topic :: Utilities",
  "Typing :: Typed"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jedi = "^0.19.1"
pygls = "^1.1.0"
cattrs = ">=23.1.2"
docstring-to-markdown = "0.*"
lsprotocol = ">=2023.0.1"
typing-extensions = {version = "^4.5.0", python = "<3.10"}

[tool.poetry.group.dev.dependencies]
PyHamcrest = "*"
mypy = "*"
nox = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
python-lsp-jsonrpc = "*"
ruff = "*"
toml-sort = "*"

[tool.poetry.scripts]
jedi-language-server = 'jedi_language_server.cli:cli'

[tool.poetry.urls]
Changelog = "https://github.com/pappasam/jedi-language-server/blob/main/CHANGELOG.md"
Issues = "https://github.com/pappasam/jedi-language-server/issues"

[tool.ruff]
line-length = 79
target-version = "py38"
unsafe-fixes = true

[tool.ruff.lint]
select = [
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # pyflakes
  "I" # isort
]
ignore = [
  "D10", # missing-docstring
  "D206", # indent-with-spaces
  "D300", # triple-single-quotes
  "D401", # imperative-mood
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "E501" # line-too-long
]

[tool.ruff.lint.per-file-ignores]
"tests/test_data/*" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
