[build-system]
requires = ["poetry-core>=2.0,<3"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
strict = true
files = "jedi_language_server"
enable_error_code = [
  "deprecated",
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
  "truthy-iterable",
  "unused-awaitable"
]
warn_unreachable = true

[[tool.mypy.overrides]]
module = "jedi.*"
ignore_missing_imports = true

[project]
name = "jedi-language-server"
version = "0.45.1"
description = "A language server for Jedi!"
authors = [
  { name = "Sam Roeca", email = "samuel.roeca@gmail.com" }
]
readme = "README.md"
keywords = [
  "python",
  "completion",
  "refactoring",
  "lsp",
  "language-server-protocol",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Topic :: Utilities",
  "Typing :: Typed",
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "jedi>=0.19.2,<0.20",
  "pygls>=1.1.0,<2.0",
  "cattrs>=23.1.2",
  "docstring-to-markdown<1",
  "lsprotocol>=2023.0.1",
  "typing-extensions>=4.5.0,<5 ; python_version < '3.10'",
]

[project.urls]
homepage = "https://github.com/pappasam/jedi-language-server"
source = "https://github.com/pappasam/jedi-language-server"
changelog = "https://github.com/pappasam/jedi-language-server/blob/main/CHANGELOG.md"
issues = "https://github.com/pappasam/jedi-language-server/issues"

[tool.poetry.group.dev.dependencies]
PyHamcrest = "*"
mypy = "*"
nox = "*"
pre-commit = "*"
pytest = "*"
python-lsp-jsonrpc = "*"
ruff = "*"
slipcover = { version = "*", python = "<3.14" }

[project.scripts]
jedi-language-server = 'jedi_language_server.cli:cli'

[tool.ruff]
line-length = 79
target-version = "py39"
unsafe-fixes = true

[tool.ruff.lint]
select = [
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]
ignore = [
  "D10",  # missing-docstring
  "D206", # indent-with-spaces
  "D300", # triple-single-quotes
  "D401", # imperative-mood
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "E501", # line-too-long
]

[tool.ruff.lint.per-file-ignores]
"tests/test_data/*" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
